<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:label="@string/app_name">

    <ImageView
        android:id="@+id/imgT"
        android:layout_width="199dp"
        android:layout_height="119dp"
        android:layout_marginTop="30dp"
        android:onClick="OnSetAvatarButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/warriors"
        tools:ignore="SpeakableTextPresentCheck"
        android:contentDescription="@string/LOGO" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="321dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:text="@string/STM"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgT"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="105dp"
        android:layout_height="27dp"
        android:layout_marginBottom="40dp"
        android:text="@string/tName"
        app:layout_constraintBottom_toTopOf="@+id/editT2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="111dp"
        android:layout_height="27dp"
        android:layout_marginBottom="40dp"
        android:text="@string/tAddress"
        app:layout_constraintBottom_toTopOf="@+id/btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@id/btn"
        android:layout_width="292dp"
        android:layout_height="85dp"
        android:layout_marginBottom="20dp"
        android:onClick="OnOpenInGoogleMaps"
        android:text="@string/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editT1"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="none"
        android:text="@string/display1"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="Autofill,LabelFor" />

    <EditText
        android:id="@+id/editT2"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:inputType="none"
        android:text="@string/display2"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="Autofill,LabelFor" />
</androidx.constraintlayout.widget.ConstraintLayout>